2009-05-29  Philipp Kern  <phil@0x539.de>

	* src/socket.cpp: set SO_REUSEADDR on server sockets

2009-05-29  Philipp Kern  <phil@0x539.de>

	* inc/server.hpp: fix is_open to include serv6_sock

2009-05-22  Armin Burgmeier  <armin@0x539.de>

	* configure.ac: Locate gnutls via pkg-config, not libgnutls-config
	which newer versions no longer have.

2009-01-03  Philipp Kern  <phil@0x539.de>

	* configure.ac:
	* NEWS: bump version to 1.3.9 and document the changes

2009-01-03  Armin Burgmeier  <armin@0x539.de>

	* inc/server.hpp: Try to open both IPv6 and IPv4 listening sockets.
	This is required in case bindtov6only is 1 to also accept IPv4
	connections in IPv6 mode.

2008-07-24  Philipp Kern  <phil@0x539.de>

	* NEWS, configure.ac: bump version to 1.3.8 and document the changes

2008-07-24  Benjamin Herr  <ben@0x539.de>

	* src/packet.cpp: Preallocate and only copy the string once when
	escaping or unescaping it.

2008-07-02  Philipp Kern  <phil@0x539.de>

	* Makefile.am: fix the file to work with `make distcheck'

2008-07-02  Philipp Kern  <phil@0x539.de>

	* configure.ac: adjust the bug reporting address to `gobby@0x539.de'

2008-07-02  Philipp Kern  <phil@0x539.de>

	* NEWS, configure.ac: bump version to 1.3.7 and document the changes

2008-07-02  Philipp Kern  <phil@0x539.de>

	* po/pt.po: add new partial Portuguese translation
	* po/{fr,it,sv,nl}.po: updated files exported from Launchpad

2008-07-01  Armin Burgmeier  <armin@0x539.de>

	* src/select.cpp: Include config.hpp so that HAVE_SYS_SELECT_H is
	defined when we need it. Thanks to Hasso Tepper.

2007-12-03  Philipp Kern <phil@0x539.de>

	* configure.ac: bump version to 1.3.6

2007-12-01  Philipp Kern <phil@0x539.de>

	* New Italian translation, thanks to Sergio Zanchetta.
	* Translation import from Rosetta.

2007-07-22  Philipp Kern <phil@0x539.de>

	* New Swedish translation by Daniel Nylander [fixes #280]

2007-06-15  Philipp Kern <phil@0x539.de>
