@@ -1,3 +1,10 @@
+2009-05-31  Pritt Laes  <plaes@plaes.org>
+
+	* Makefile.am: Don't use LIBGNUTLS_LIBS and LIBGNUTLS_CFLAGS anymore,
+	as these variables are no longer set anyway.
+
+	* m4/libgnutls.m4: Removed. This file is no longer required.
+
 2009-05-29  Philipp Kern  <phil@0x539.de>
 
 	* src/socket.cpp: set SO_REUSEADDR on server sockets
